@@ -21,7 +21,6 @@ import com.github.javaparser.printer.DefaultPrettyPrinter;
 import com.github.javaparser.utils.Pair;
 import com.sun.source.util.JavacTask;
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.FileVisitResult;
@@ -57,7 +56,7 @@ import org.checkerframework.checker.signature.qual.DotSeparatedIdentifiers;
 import org.checkerframework.checker.signature.qual.FullyQualifiedName;
 import org.checkerframework.framework.stub.AnnotationFileParser;
 import org.checkerframework.framework.util.JavaParserUtil;
-import org.plumelib.util.FilesPlume;
+import org.plumelib.util.FilesP;
 import org.plumelib.util.MapsP;
 
 /**
@@ -88,7 +87,7 @@ public class InsertAjavaAnnotations {
       System.exit(1);
     }
 
-    DiagnosticCollector<JavaFileObject> diagnostics = new DiagnosticCollector<JavaFileObject>();
+    DiagnosticCollector<JavaFileObject> diagnostics = new DiagnosticCollector<>();
     try (JavaFileManager fileManager = compiler.getStandardFileManager(diagnostics, null, null)) {
       if (fileManager == null) {
         System.err.println("Could not get file manager");
@@ -392,7 +391,7 @@ public class InsertAjavaAnnotations {
       StringBuilder insertionContent = new StringBuilder();
       for (AnnotationExpr annotation : annotations) {
         insertionContent.append(printer.print(annotation));
-        insertionContent.append(" ");
+        insertionContent.append(' ');
       }
 
       // Can't test `annotations.isEmpty()` earlier because `annotations` has type `Iterable`.
@@ -542,12 +541,12 @@ public class InsertAjavaAnnotations {
   public void insertAnnotations(String annotationFileName, String javaFileName) {
     try {
       File javaFile = new File(javaFileName);
-      String fileContents = FilesPlume.readString(Path.of(javaFileName));
-      @SuppressWarnings("regex") // next release of plume-lib annotates `inferLineSeparator()`
-      @Regex String lineSeparator = FilesPlume.inferLineSeparator(javaFileName);
-      try (FileInputStream annotationInputStream = new FileInputStream(annotationFileName)) {
+      String fileContents = FilesP.readString(Path.of(javaFileName));
+      @Regex String lineSeparator = FilesP.inferLineSeparator(javaFileName);
+      try (InputStream annotationInputStream =
+          Files.newInputStream(Paths.get(annotationFileName))) {
         String result = insertAnnotations(annotationInputStream, fileContents, lineSeparator);
-        FilesPlume.writeString(javaFile, result);
+        FilesP.writeString(javaFile, result);
       }
     } catch (IOException e) {
       System.err.println(
@@ -587,7 +586,7 @@ public class InsertAjavaAnnotations {
     InsertAjavaAnnotations inserter = new InsertAjavaAnnotations(createElements());
     // For each Java file, this visitor inserts annotations into it.
     FileVisitor<Path> insertionVisitor =
-        new SimpleFileVisitor<Path>() {
+        new SimpleFileVisitor<>() {
           @Override
           public FileVisitResult visitFile(Path path, BasicFileAttributes attrs) {
             if (!path.getFileName().toString().endsWith(".java")) {
